# gpx2artdata

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  HACKING.md  LICENSE.txt  README.md  RELEASE.md  TODO.md  artdata.env.example  dev-server.sh  gcloud.env.example  local.env.example  main.py  pyproject.toml  reqirements.txt  requirements.txt  server.sh
scripts/: build-assets.sh  build.sh  bump-version.sh  dev-setup.sh  gcloud-push.sh  make_gifs.py  make_vids.py  patience.sh  run.sh  species_list.py  update-dictionary.sh
src/gpx2artdata/: __about__.py  __init__.py  colmaps.py  converters.py
static/: dictionary.js  dictionary_base.json  main.js  style.css  vendor.js
static/media/: copy-dark.webm  copy-light.webm  edit-dark.webm  edit-light.webm  select-dark.webm  select-light.webm
templates/: githash.txt  help.html  index.html  info.html  macros.html  media.html  result.html  static_url.txt
tests/: Lager 1.gpx  __init__.py  test.py
